catalog/view/theme/sealskinz/stylesheet/stylesheet.css
/* ... */
#header #cart.active .content {
	display: block;
}
#header #cart.active .content a {
	border: none !important;
        display: inline-table;
}
#header #cart.active .content a:link, #header #cart.active .content a:visited, #header #cart.active .content a:link active{
	background-color: #FFFFFF !important;
        color: grey !important;
        font-weight: bolder !important;
        text-decoration: none !important;
}

.mini-cart-info table {
	border-collapse: collapse;
	width: 100%;
	margin-bottom: 5px;
}
.mini-cart-info td {
	color: #000;
	vertical-align: top;
	padding: 10px 5px;
	border-bottom: 1px solid #EEEEEE;
}
.mini-cart-info .image {
	width: 1px;
}
.mini-cart-info .image img {
	border: 1px solid #EEEEEE;
	text-align: left;
}
.mini-cart-info .name small {
	color: #666;
}
.mini-cart-info .quantity {
	text-align: right;
}
.mini-cart-info td.total {
	text-align: right;
}
.mini-cart-info .remove {
	text-align: right;
}
.mini-cart-info .remove img {
	cursor: pointer;
}
.mini-cart-total {
	text-align: right;
}
.mini-cart-total table {
	border-collapse: collapse;
	display: inline-block;
	margin-bottom: 5px;
}
.mini-cart-total td {
	color: #000;
	padding: 4px;
}
#header #cart .checkout {
	text-align: right;
	clear: both;
}
#header #cart .empty {
	padding-top: 50px;
	text-align: center;
}
.rlink {
    margin-right: 158px;
}
#table-price, #table-price td {
    -webkit-border-radius: 0px 0px 0px 0px;
    -moz-border-radius: 0px 0px 0px 0px;
    -khtml-border-radius: 0px 0px 0px 0px;
    border-radius: 0px 0px 0px 0px;
    margin-bottom: 0px;
    line-height: 10px;
}
#header #search {
    position: relative;
    float:right;
}
#header .button-form-search {
    position: relative;
    left: 216px;
    background: url('../image/button-search.png') center center no-repeat;
    top: 27px;
    width: 16%;
    height: 24px;
    cursor: pointer;
}

#header #search input {
    padding: 1px 1px 1px 14px;
    height: 26px;   
    border: 2px solid #CCCCCC;   
    min-width: 240px;
}
@media screen and (-webkit-min-device-pixel-ratio:0) { 

    #header #search input {
        margin-right: 42px;
    }

}
#header #welcome {
    position: absolute;
    top: 47px;
    right: 0px;
    z-index: 5;
    width: 100%;
    text-align: right; 
    color: #999999;
}
#welcome {


    margin-right: 0px;
    z-index: 5;
    width: 100%;
    color: #999999;
    font-size: 12px;
}
#header .links {
    position: absolute;
    right: 0px;
    bottom: 3px;
    font-size: 10px;
    padding-right: 10px;
}
#header .links a {
    float: left;
    display: block;
    padding: 0px 0px 0px 7px;
    color: #38B0E3;
    text-decoration: none;
    font-size: 12px;
}
#header .links a + a {
    margin-left: 8px;
    border-left: 1px solid #CCC;
}

#myCarousel {
    margin-bottom: 0;
    background: #000;
    position: relative;
    overflow: hidden;
}
#myCarousel .carouselBasebarContainer {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 12%;
    background: #000;
    background: rgba(0,0,0,.6);
    z-index: 3;
}
#myCarousel .carouselBasebarContainer .container {
    text-align: right;
    padding-top: 5px;
    padding-bottom: 5px;
    position: relative;
}
#myCarousel .carouselBasebarContainer img {
    width: auto;
}
#myCarousel .carouselBasebarContainer .imgGreat {
    display: inline-block;
    *display: inline;
    *zoom: 1;
}
#myCarousel .carousel-inner {
    position: absolute;
    top: 0;
    left: 0;
}
#myCarousel .carousel-inner #text {
    position: absolute;
    z-index: 0;
    top:30px;
    left:30px;
    color:#9cc663;
    font-size: 52px;
    font-weight: bold;
}
#myCarousel .carousel-inner .bannerWrapper {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}
#myCarousel .carousel-inner .bannerWrapper .container{
    width: 984px; 
}
#myCarousel .carousel-inner .bannerWrapper .container > div {
    width: 25em;
    text-align: left;
    font-size: 27px;
    color: #fff;
}
#myCarousel .carousel-inner .bannerWrapper .container > div h1 {
    color: #9dc96a;
    font-size: 2em;
    font-weight: bold;
    text-shadow: 2px 2px 3px #696d6c;
    margin-bottom: 12px;
    margin-top: 0;
}
#myCarousel .carousel-inner .bannerWrapper .container > div h2 {
    color: #FFFFFF;
    font-size: 1.4em;
    font-weight: bold;
    text-shadow: 2px 2px 3px #696d6c;
    margin-bottom: 12px;
    margin-top: 0;
}
#myCarousel .carousel-inner .bannerWrapper .container > div p {
    text-shadow: 2px 2px 3px #afb4b8;
    line-height: 1.1em;
}
#myCarousel .carousel-inner .bannerWrapper .container > div a {
    text-shadow: 2px 2px 3px #000000;
    line-height: 1.1em;
}
.banner .image .bannerRight {
    float: right;
}
#myCarousel img {
    width: 100%;
}
.carousel-indicators{
    top: 0;
}
#myCarousel .carousel-indicators {
right: auto;
left: 0;
top: 0;
}
#myCarousel .carousel-indicators li {
width: 10px;
height: 10px;
background-color: #67653C;
background-color: rgba(255,255,255,0.25);
-webkit-border-radius: 8px;
-moz-border-radius: 8px;
border-radius: 8px;
border: 3px solid #969674;
}
#myCarousel .carousel-indicators .active {
border-color: #fff;
background-color: #8BAE5C;
}

/* menu */
#menu {
    background: #585858;
    border-bottom: 1px solid #000000;
    height: 37px;
    margin-bottom: 15px;
    -webkit-border-radius: 5px 5px 5px 5px;
    -moz-border-radius: 5px 5px 5px 5px;
    -khtml-border-radius: 5px 5px 5px 5px;
    border-radius: 5px 5px 5px 5px;
    -webkit-box-shadow: 0px 2px 2px #DDDDDD;
    -moz-box-shadow: 0px 2px 2px #DDDDDD;
    box-shadow: 0px 2px 2px #DDDDDD;
    padding: 0px 5px;
}
#menu ul {
    list-style: none;
    margin: 0;
    padding: 0;
}
#menu > ul > li {
    position: relative;
    float: left;
    z-index: 20;
    padding: 6px 5px 5px 0px;
}
#menu > ul > li:hover {
}
/* ... */

